Upgrade: JDK17 Upgrade: use maven to build